--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -3,34 +3,22 @@
     box-sizing: border-box;
 }
 
+body {
+    background-color: #f6f8fc;
+}
+
 .content {
+    width: 100vw;
+    height: 100vh;
     padding: 1rem;
+    background-color: #fff;
 }
 
-.content h1 {
-    margin: 0;
-}
-
-ol.pokemons {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    list-style: none;
-    padding: 0;
-    margin: 0;
-}
-
-ol.pokemons li {
-    display: flex;
-    flex-direction: column;
-    margin: .5rem;
-    padding: 2rem 1rem;
-    border-radius: 1rem;
-    background-color: #14a06f;
-    color: #fff;
-}
-
-ol.pokemons li img {
-    max-width: 100%;
-    max-height: 100px;
-    align-self: flex-end; /* deixa a imagem alinhada à direita */
+@media screen and (min-width:992px) {
+    .content {
+        max-width: 992px;
+        height: auto;
+        margin: 1rem auto;
+        border-radius: 1rem;
+    }
 }
